11_minikube/chemicals/silver/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silver
  labels:
    app: silver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silver
  template:
    metadata:
      labels:
        app: silver
    spec:
      containers:
      - name: silver
        image: roskenet/silver:0.1.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
