11_minikube/chemicals/silver/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silver
spec:
  selector:
    app: silver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
