11_minikube/chemicals/silver/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: silver.minikube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: silver
            port:
              number: 80
